Wcag4 color contrast fix for hide/show results control

--- a/webapp/src/main/webapp/src/primeng-overrides.less
+++ b/webapp/src/main/webapp/src/primeng-overrides.less
@@ -296,6 +296,13 @@ body {
   }
 }
 /**Writing Trait Scores UI Updates **/
+[_nghost-c12] > a[_ngcontent-c12] {
+  color: #757575;
+  &:hover {
+    color: #333;
+    text-decoration: underline;
+  }
+}
 writing-trait-scores {
   a.nav-link.active {
     background-color: #f8f8f8;
